--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
 
         <div class="icon" data-window="snake-window">
-            <img src="icons/snake.ico" alt="Snake" class="icon-image">
+            <img src="icons/Snake.ico" alt="Snake" class="icon-image">
             <span class="icon-text">Snake</span>
         </div>
 
