--- a/index.html
+++ b/index.html
@@ -1,44 +1,55 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/p5.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>Windows 95 Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 </head>
 <body>
-    <div id="boot-screen">Starting Windows 95 Portfolio...</div>
+    <div id="boot-screen">
+        <div class="boot-text">
+            Starting Windows 95 Portfolio...
+        </div>
+    </div>
 
     <div id="taskbar">
         <button id="start-button">
             <img src="icons/start.ico" alt="Start" class="icon-image">
+            Start
         </button>
         <div id="open-apps"></div>
-        <span id="taskbar-time"></span>
+        <div id="taskbar-time"></div>
     </div>
 
     <div id="desktop">
+        <canvas id="bg"></canvas>
+
         <div class="icon" data-window="about-window">
             <img src="icons/notepad.ico" alt="About" class="icon-image">
-            <span class="icon-text">About</span>
+            <div class="icon-text">About</div>
         </div>
 
         <div class="icon" data-window="projects-window">
-            <img src="icons/folder.ico" alt="Projects" class="icon-image">
-            <span class="icon-text">Projects</span>
+            <img src="icons/projects.ico" alt="Projects" class="icon-image">
+            <div class="icon-text">Projects</div>
         </div>
 
         <div class="icon" data-window="resume-window">
-            <img src="icons/projects.ico" alt="Resume" class="icon-image">
-            <span class="icon-text">Resume</span>
+            <img src="icons/folder.ico" alt="Resume" class="icon-image">
+            <div class="icon-text">Resume</div>
         </div>
 
         <div class="icon" data-window="contact-window">
             <img src="icons/notepad.ico" alt="Contact" class="icon-image">
-            <span class="icon-text">Contact</span>
+            <div class="icon-text">Contact</div>
         </div>
 
         <div class="icon" data-window="snake-window">
             <img src="icons/Snake.ico" alt="Snake" class="icon-image">
-            <span class="icon-text">Snake</span>
+            <div class="icon-text">Snake</div>
         </div>
 
         <div id="about-window" class="window">
@@ -51,7 +62,7 @@
                 </div>
             </div>
             <div class="content">
-                I am Tyler Evans a Computer Science student at FAU, currently employed with the City of Oakland Park, FL
+                I am Tyler Evans a Computer Science student at FAU, currently employed with the City of Oakland Park, FL. My focus is in AI prompt engineering and AI integrations.
             </div>
         </div>
 
@@ -65,7 +76,16 @@
                 </div>
             </div>
             <div class="content">
-                Projects arent uploaded right now, most are WIP
+                Projects arent uploaded to GIT right now, most are WIP<br>
+                <br>
+                PDF File Converter and splitter<br>
+                - specific to my usecase with basic ui and control over file size/overlap, can convert most plaintext based files into PDF<br>
+                <br>
+                Web Scraper<br>
+                - specific to my usecase scrapes city website and stores all links before scraping, formatting, and anaylyzing using GPT API<br>
+                <br>
+                Mobile Game<br>
+                - Stage 1 development no info currently
             </div>
         </div>
 
@@ -79,7 +99,23 @@
                 </div>
             </div>
             <div class="content">
-                IN PROGRESS
+                <strong>Programming Languages</strong><br>
+                - Python and C++ (1 year+ experience)<br>
+                - HTML, CSS, JS, C (Basic Experience)<br>
+                <br>
+                <strong>Work Experience</strong><br>
+                - City of Oakland Park, Florida<br>
+                    3 internships with the City in the Summers of 2023, 2024, and currently 2025<br>
+                <br>
+                    2023 - IT Technician<br>
+                        In-person and remote support for city services and software<br>
+                    2024 - IT Technician/AI Prompting<br>
+                        In-person and remote support, started integration of GPT into city workflows, created custom GPTs for specific use cases<br>
+                    2025 - AI Integration/IT Technician<br>
+                        Broader AI SaaS usage, working on workflow integrations for all departments<br>
+                <br>
+                <strong>Software Experience</strong><br>
+                - RetellAI, ChatGPT, RingCentral, Azure, Active Directory, SentinelOne, Cisco Secure Service, Faronics
             </div>
         </div>
 
@@ -108,16 +144,15 @@
             </div>
             <div class="content">
                 <button id="snakeStartButton">Start Game</button>
-                <canvas id="snakeCanvas" style="display:none;"></canvas>
-                <div id="snakeScore" style="display:none;">Score: 0</div>
-                <div id="snakeGameOver" style="display:none; text-align:center; font-size:20px;">
-                    Game Over!<br>Score: <span id="snakeFinalScore"></span><br>
+                <canvas id="snakeCanvas"></canvas>
+                <div id="snakeScore">Score: 0</div>
+                <div id="snakeGameOver">
+                    Game Over!<br>
+                    Score: <span id="snakeFinalScore"></span><br>
                     <button id="snakeRestart">Restart</button>
                 </div>
             </div>
         </div>
-
-        <canvas id="bg"></canvas>
     </div>
 
     <script src="script.js"></script>
